--- a/html/pull-on-loading.html
+++ b/html/pull-on-loading.html
@@ -2,11 +2,72 @@
 <html lang="zh">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+	<title>上拉加载</title>
+	<link rel="stylesheet" href="../lui.css">
+	<style type="text/css">
+		/* 上拉加载样式 */
+		.loading{
+			display: none;
+			text-align: center;
+			font-size: 12px;
+			color: #333;
+			padding: 6px 0 15px 0;
+		}
+		/*列表样式*/
+		ul{
+			padding: 0;
+			margin: 8px;
+		}
+		li{
+			list-style: none;
+			padding:11px 15px;
+			border-bottom: 1px solid #eee;
+			font-size: 14px;
+		}
+	</style>
+	<script src="https://cdn.bootcss.com/vue/2.2.2/vue.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+	<script src="../lui.js"></script>
 </head>
 <body>
-	
+	<div id="main">
+		<ul>
+			<li v-for="item in dataList">{{ item.listName }}</li>
+		</ul>
+		<div class="loading">上拉加载更多</div>
+	</div>
+
+	<script type="text/javascript">
+		var vm = new Vue({
+			data: {
+			    pageSize: 20,
+				pageNum: 1,
+				dataList:[
+
+				]
+			}
+		}).$mount("#main");
+
+        var up = new UpperLoading({
+            jom: $("#main"),
+            rate: 50
+        },function(self){
+            $(".loading").show();
+            $(".loading").html("加载中,请稍候…");
+            setTimeout(function(){
+                for(var i=0;i<vm.pageSize;i++){
+                    vm.dataList = vm.dataList.concat({'listName': '这是加载后的测试参数'});
+                }
+                vm.pageNum ++;
+				if (vm.pageNum == 3){
+                    self.setScroll(true);
+                    $(".loading").html("没有更多数据了");
+				}else {
+                    self.setScroll(false);
+                    $(".loading").hide();
+				}
+            },2000);
+        });
+	</script>
 </body>
 </html>
