--- a/vue/top-filtrate-vue.html
+++ b/vue/top-filtrate-vue.html
@@ -126,7 +126,7 @@
             },
             methods: {
                 tabToggle (index) {
-                    this.tabIndex !== index && this.tabIndex = index;
+                    (this.tabIndex !== index) && (this.tabIndex = index);
                 }
             }
         }).$mount("#main");
